--- a/seaFood/index.html
+++ b/seaFood/index.html
@@ -45,7 +45,7 @@
 
 
                 <ul class="options">
-                    <li><a href="#">Sushi</a></li>
+                    <li><a href="sushi.html">Sushi</a></li>
                     <li><a href="#">Sauces</a></li>
                     <li><a href="#">Recipes</a></li>
                     <li><a href="#">Pairing</a></li>
