--- a/seaFood/lobster.html
+++ b/seaFood/lobster.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="nav-mini">
                     <ul>
-                        <li><a href="#">Sushi</a></li>
+                        <li><a href="sushi.html">Sushi</a></li>
                         <li><a href="seaFoodInfo.html">Seafood Info</a></li>
                         <li><a href="#">Recipes</a></li>
                     </ul>
