added sushi page and collapsables

--- a/seaFood/sushi.html
+++ b/seaFood/sushi.html
@@ -258,17 +258,128 @@
                 </div>
 
 
-                <button type="button" class="collapsible">XXXX</button>
+                <button type="button" class="collapsible">Popular Sushi Rolls</button>
                 <div class="content2">
                     <div class="octoType3">
 
-                        <h1>Aji - Spanish Mackerel</h1>
-                        <div class="octoPic3"></div>
-                        <p>Because of the small blue rings that look like they’re painted around their bodies, the
-                            blue-ringed octopus are not<br>
-                            difficult to spot. Like other octopus, they can camouflage themselves and turn any color
-                            they need to be for protection,<br>
-                            but these blue rings always remain.<br><br>
+                        <h1>1. Tiger Roll</h1>
+                        <div class="tigerRoll">
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+                    </div>
+
+                        <h1>. Philadelphia Roll</h1>
+                        <div class="philadelphiaRoll">
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+                    </div>
+
+                        <h1>3. Crunch Roll</h1>
+                        <div class="crunchRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>4. Dynamite Roll</h1>
+                        <div class="dynamiteRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>5. Rainbow Roll</h1>
+                        <div class="rainbowRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>6. Dragon Roll</h1>
+                        <div class="dragonRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>7. California Roll</h1>
+                        <div class="californiaRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>8. Spicy Tuna Roll</h1>
+                        <div class="spicyTunaRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>9. Caterpillar Roll</h1>
+                        <div class="caterpillarRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>10. Spider Roll</h1>
+                        <div class="spiderRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>11. Vegetable Roll</h1>
+                        <div class="vegetableRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>12. Shrimp Tempura Roll</h1>
+                        <div class="shrimpTempuraRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>13. Surf and Turf Roll</h1>
+                        <div class="surfandTurfRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>14. Tempura Roll</h1>
+                        <div class="tempuraRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
+
+
+                        <h1>15. Volcano Roll</h1>
+                        <div class="volcanoRoll"></div>
+                        <p>	A topping, usually fish, served on top of sushi rice. <br>
+                            Not all nigiri is raw, though this dish is best for people who want to appreciate the <br>
+                            flavor of the fish, shellfish, or other toppings
+                        </p>
 
 
                         </p>
