adjusting the background colors on the collapsables on sauces

--- a/seaFood/index.html
+++ b/seaFood/index.html
@@ -46,9 +46,9 @@
 
                 <ul class="options">
                     <li><a href="sushi.html">Sushi</a></li>
-                    <li><a href="#">Sauces</a></li>
+                    <li><a href="sauces.html">Sauces</a></li>
                     <li><a href="#">Recipes</a></li>
-                    <li><a href="#">Pairing</a></li>
+                    <li><a href="pairingList.html">Pairing</a></li>
                     <li><a href="fMarket.html">Markets</a></li>
                     <li><a href="restaurants.html">Restaurants</a></li>
                 </ul>
