--- a/seaFood/sushi.html
+++ b/seaFood/sushi.html
@@ -64,8 +64,8 @@
                 </div>
                 <div class="nav-mini">
                     <ul>
-                        <li><a href="#">Sushi</a></li>
-                        <li><a href="seaFoodInfo.html">Seafood Info</a></li>
+                        <li><a href="pairingList.html">Pairing</a></li>
+                        <li><a href="sauces.html">Sauces</a></li>
                         <li><a href="#">Recipes</a></li>
                     </ul>
                 </div>
@@ -415,13 +415,19 @@
 
                         <h1>4. California Two-Spot Octopus</h1>
                         <div class="octoPic4"></div>
-                        <p>With a very distinct appearance, the California Two-Spot octopus is also called the
-                            Bimac
-                            octopus. Blue spots of various shades are<br>
-                            found around their eyes, and their bodies get to roughly seven inches long, although
-                            they have arms that can reach up to 25 feet wide.<br><br>
+                        <p>You must know what to eat with sushi. I usually start my meal with miso soup and possibly some tempura—fried vegetables<br>
+                             in a crunchy batter.<br><br>
 
+                             With your sushi, you will probably get wasabi (green paste made from Japanese horseradish) and ginger (pink pickled slices).<br><br>
 
+                             The Japanese use ginger to clear their palettes between courses. The wasabi should be mixed with shoyu (soy sauce) as a <br>
+                             dipping sauce for your sushi.<br><br>
+
+                             The sushi roll you get might have brightly colored orange spheres or tiny black spheres on it—these are both roe, which <br>
+                             are fish eggs.<br><br>
+
+                             -Tobiko is the roe of flying fish and is usually a bright orange, though it can be colored to be black or even green.<br><br>
+                             -Masago is the roe of capelin—this is also usually orange-colored unless it is dyed.
                         </p>
                     </div>
                 </div>
