adjusted the background colors on the collapsables on sushi

--- a/seaFood/sauces.html
+++ b/seaFood/sauces.html
@@ -269,62 +269,87 @@
                                 so<br>
                                 much more than just ketchup and horseradish.
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-2">
                             <h1>2. Old Bay Cocktail Sauce</h1>
                             <div class="octoPic3-2"></div>
                             <p>Our Maryland roots wouldn’t have it any other way…than Old Bay. Our favorite of the <br>
                                 classic style cocktail sauces, spiced with our favorite seasoning blend.
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-3">
                             <h1>3. Stonewall Kitchen Tequila Lime Cocktail Sauce</h1>
                             <div class="octoPic3-3"></div>
                             <p>Our ‘fancy’ cocktail winner would be Stonewall Kitchen’s Tequila Lime Cocktail Sauce.<br>
                                 Nicely spiked and just waiting for a shrimp or two (or three).
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-4">
                             <h1>4. Gold’s Tartar Sauce</h1>
                             <div class="octoPic3-4"></div>
                             <p>Gold’s goes above in beyond on the tartar with a little extra ingredient…horseradish.<br>
                                 I know, I know…we may be busting in on cocktail sauce with this one BUT that little<br>
                                 bite of heat adds a nice touch.
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-5">
                             <h1>5. Frisch’s Tartar Sauce</h1>
                             <div class="octoPic3-5"></div>
                             <p>If there was tartar sauce royalty, it would be Frisch’s. A family owned and operated<br>
                                 business’s (the family behind Bob’s Big Boy) original recipe is everything we ever<br>
                                 wanted in a tartar sauce. Smooth, creamy, tart, dilly, a little sweetness…perfection!
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-6">
                             <h1>6. Kraft’s Tartar Sauce</h1>
                             <div class="octoPic3-6"></div>
                             <p>This choice might come as a bit of a surprise but Kraft makes a damn good tartar sauce!
                                 <br>
                                 Tangy, tart and sweet.
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-7">
                             <h1>7. Sweet Baby Ray’s Secret Sauce</h1>
                             <div class="octoPic3-7"></div>
                             <p>Secret, yes. Lack of flavor? No way! This remoulade variant adds a little punch with <br>
                                 horseradish. Finger licking good.
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-8">
                             <h1>8. Boar’s Head Cajun Style Gourmaise</h1>
                             <div class="octoPic3-8"></div>
                             <p>Boar’s Head comes through in spectacular fashion with this spicier, super cajun
                                 remoulade<br>
                                 sauce. Excellent quality and great for crab cake sandwiches!
                             </p>
+                        </div>
 
+
+                        <div class="octoType3-9">
                             <h1>9. Sir Kensington’s Special Sauce</h1>
                             <div class="octoPic3-9"></div>
                             <p>As close to homemade remoulade as we could find, Sir Kensington’s Special Sauce is
                                 top<br>
                                 notch. Great flavor with a hint of mustard and farm-stand pickles.
                             </p>
-
-
                         </div>
+
+
+
                     </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------------- -->
@@ -347,7 +372,10 @@
                                 infused<br>
                                 into some butter.
                             </p>
+                        </div>
 
+
+                        <div class="octoType4-2">
                             <h1>2. Lemon Butter & Herb Sauce</h1>
                             <div class="octoPic4-2"></div>
                             <p>A classic, and in fact any citrusy fruit can be experimented with such as lime, orange or
@@ -356,7 +384,10 @@
                                 a
                                 twist?)
                             </p>
+                        </div>
 
+
+                        <div class="octoType4-3">
                             <h1>3. Shallot and Tarragon Sauce</h1>
                             <div class="octoPic4-3"></div>
                             <p>although perhaps not the most popular of the herb family, Tarragon makes up one half of
@@ -366,7 +397,10 @@
                                 pleasantly<br>
                                 surprises, with its herby perfume matching so well with a creamy butter.
                             </p>
+                        </div>
 
+
+                        <div class="octoType4-4">
                             <h1>4. Escargot Herb Butter</h1>
                             <div class="octoPic4-4"></div>
                             <p>
@@ -378,7 +412,10 @@
                                 herbs<br>
                                 (try tarragon, fennel, parsley). Delicious!
                             </p>
+                        </div>
 
+
+                        <div class="octoType4-5">
                             <h1>5. Asian Spices</h1>
                             <div class="octoPic4-5"></div>
                             <p>Asian flavors work well with lobster as long as you’re careful not to overdo the strong
@@ -390,7 +427,10 @@
                                 tempura lobster<br>
                                 bites. Or try a chili paste mixed with lime juice, a little brown sugar and fish sauce.
                             </p>
+                        </div>
 
+
+                        <div class="octoType4-6">
                             <h1>6. Sauces for Lobster Meat Served Cold</h1>
                             <div class="octoPic4-6"></div>
                             <p>You can’t beat a homemade mayonnaise, béarnaise or hollandaise sauce any day of the week.
@@ -404,7 +444,10 @@
                                 -Truffled mayonnaise (just a few drops of truffle oil<br>
                                 -Spicy avocado dip (with Greek yogurt, hot sauce or fresh chili)<br>
                             </p>
+                        </div>
 
+
+                        <div class="octoType4-7">
                             <h1>7. Sauces for Lobster Tails</h1>
                             <div class="octoPic4-7"></div>
                             <p>You can, of course, apply all of the above to tasty lobster tails. However, lobster
@@ -430,10 +473,8 @@
                                 perfect for this kind<br>
                                 of sauce.
                             </p>
-
-
-
                         </div>
+
                     </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------------- -->
@@ -447,46 +488,56 @@
 
 
                         <div class="octoType5">
-
                             <h1>1. Chili Sesame Dressing</h1>
                             <div class="octoPic5"></div>
                             <p>With a beautiful blue-green color, the Caribbean Reef octopus is stunning to look
                                 at.
                             </p>
+                        </div>
 
-
+                        <div class="octoType5-2">
                             <h1>2. Ancho Chile Sauce</h1>
                             <div class="octoPic5-2"></div>
                             <p>With a beautiful blue-green color, the Caribbean Reef octopus is stunning to look
                                 at.
                             </p>
+                            </div>
 
+
+                            <div class="octoType5-3">
                             <h1>3. Black Bean–Pear Sauce</h1>
                             <div class="octoPic5-3"></div>
                             <p>With a beautiful blue-green color, the Caribbean Reef octopus is stunning to look
                                 at.
                             </p>
+                        </div>
 
+                            <div class="octoType5-4">
                             <h1>4. Takoyaki sauce</h1>
                             <div class="octoPic5-4"></div>
                             <p>With a beautiful blue-green color, the Caribbean Reef octopus is stunning to look
                                 at.
                             </p>
+                        </div>
 
+                            <div class="octoType5-5">
                             <h1>5. Kewpie sauce (Roasted Sesame sauce)</h1>
                             <div class="octoPic5-5"></div>
                             <p>With a beautiful blue-green color, the Caribbean Reef octopus is stunning to look
                                 at.
                             </p>
+                        </div>
 
+                            <div class="octoType5-6">
                             <h1>6. Tempura Dipping Sauce</h1>
                             <div class="octoPic5-6"></div>
                             <p>With a beautiful blue-green color, the Caribbean Reef octopus is stunning to look
                                 at.
                             </p>
-
-
                         </div>
+
+
+                        
                     </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------------- -->
@@ -500,7 +551,6 @@
                         <div class="octopusPicture1-6"></div>
 
                         <div class="octoType6">
-
                             <h1>1. Romesco sauce</h1>
                             <div class="octoPic6"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -509,7 +559,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                        <div class="octoType6-2">
                             <h1>2. Marinara sauce</h1>
                             <div class="octoPic6-2"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -518,7 +570,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-3">
                             <h1>3. Garlic Lemon Mayonnaise</h1>
                             <div class="octoPic6-3"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -527,7 +581,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-4">
                             <h1>4. Chipotle Aioli sauce</h1>
                             <div class="octoPic6-4"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -536,7 +592,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-5">
                             <h1>5. Lemon Basil Sauce</h1>
                             <div class="octoPic6-5"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -545,7 +603,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-6">
                             <h1>6. Ranch</h1>
                             <div class="octoPic6-6"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -554,7 +614,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-7">
                             <h1>7. Smoked chipotle sauce</h1>
                             <div class="octoPic6-7"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -563,7 +625,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-8">
                             <h1>8. Creamy chipotle sauce</h1>
                             <div class="octoPic6-8"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -572,7 +636,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-9">
                             <h1>9. Red sauce</h1>
                             <div class="octoPic6-9"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -581,7 +647,9 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
+                        </div>
 
+                            <div class="octoType6-10">
                             <h1>10. Sweet orange Sauce</h1>
                             <div class="octoPic6-10"></div>
                             <p>The Common octopus varies greatly in size. They can range from 12 to 36
@@ -590,9 +658,10 @@
                                 pounds. Because of this variety, the Common octopus is often confused with
                                 other types
                             </p>
-
-
                         </div>
+
+
+                        
                     </div>
                 </div>
                 <!-- ----------------------------------------------------------------------------------------------- -->
