changed sidemenu png and subhero images and newsletter background

--- a/seaFood/fish.html
+++ b/seaFood/fish.html
@@ -48,7 +48,6 @@
             <aside class="nav-sidebar">
                 <ul>
                     <li><span>Species Info:</span></li>
-                    <li><a href="fish.html">Fish</a></li>
                     <li><a href="crabs.html">Crabs</a></li>
                     <li><a href="shrimp.html">Shrimp</a></li>
                     <li><a href="lobster.html">Lobsters</a></li>
@@ -542,10 +541,6 @@
                 </div>
 
 
-
-
-
-
             </div>
             <div class="divider"></div>
 
@@ -554,13 +549,14 @@
 
 
         <div class="newsLetter">
+
             <form action="/action_page.php">
                 <div class="container">
                     <h2>Subscribe to our Newsletter</h2>
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
@@ -572,6 +568,7 @@
                     <input type="submit" value="Subscribe">
                 </div>
             </form>
+
         </div>
 
         <div class="footer">
