--- a/seaFood/lobster.html
+++ b/seaFood/lobster.html
@@ -65,7 +65,7 @@
                 <div class="nav-mini">
                     <ul>
                         <li><a href="sushi.html">Sushi</a></li>
-                        <li><a href="seaFoodInfo.html">Seafood Info</a></li>
+                        <li><a href="sauces.html">Sauces</a></li>
                         <li><a href="#">Recipes</a></li>
                     </ul>
                 </div>
@@ -73,6 +73,10 @@
         </div>
 
         <div class="content">
+
+            <h1>Lobster</h1>
+            <div class="lobPicture1"></div>
+
             <!-- <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
@@ -89,8 +93,7 @@
                 <div class="content2">
 
                 <div class="lobster1">
-                    <h1>Lobster</h1>
-                    <div class="lobPicture1"></div>
+
 
                     <div class="lobsterType1">
 
@@ -205,6 +208,7 @@
                 </div>
 
                 </div>
+                <div class="divider"></div> 
             </div>
             
 
@@ -217,7 +221,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
