--- a/seaFood/pairingList.html
+++ b/seaFood/pairingList.html
@@ -151,7 +151,7 @@
                 </div>
             </div>
 
-
+            <div class="divider"></div> 
         </div>
 
         <div class="newsLetter">
@@ -161,7 +161,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
