--- a/seaFood/squid.html
+++ b/seaFood/squid.html
@@ -73,6 +73,9 @@
         </div>
 
         <div class="content">
+
+            <h1>Squid</h1>
+            <div class="squidPicture1"></div>
             <!-- <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
@@ -89,8 +92,7 @@
                 <div class="content2">
 
                 <div class="squid1">
-                    <h1>Squid</h1>
-                    <div class="squidPicture1"></div>
+
 
                     <div class="squidType1">
 
@@ -185,6 +187,7 @@
 
 
                 </div>
+                <div class="divider"></div>
             </div>
             
 
@@ -197,7 +200,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
