--- a/seaFood/sushi.html
+++ b/seaFood/sushi.html
@@ -50,6 +50,7 @@
                     <li><a href="shrimp.html">Shrimp</a></li>
                     <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="squid.html">Squid</a></li>
+                    <li><a href="octopus.html">Octopus</a></li>
                 </ul>
             </aside>
 
@@ -70,6 +71,7 @@
                     </ul>
                 </div>
             </div>
+            <div class="divider"></div>
         </div>
 
         <div class="content">
@@ -565,6 +567,7 @@
 
 
             </div> <!-- content2 -->
+            <div class="divider"></div>
         </div>
 
 
@@ -576,7 +579,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
