--- a/seaFood/crabs.html
+++ b/seaFood/crabs.html
@@ -65,7 +65,7 @@
                 <div class="nav-mini">
                     <ul>
                         <li><a href="sushi.html">Sushi</a></li>
-                        <li><a href="seaFoodInfo.html">Seafood Info</a></li>
+                        <li><a href="sauces.html">Sauces</a></li>
                         <li><a href="#">Recipes</a></li>
                     </ul>
                 </div>
@@ -73,6 +73,10 @@
         </div>
 
         <div class="content">
+
+            <h1>Crab</h1>
+            <div class="crabPicture1"></div>
+
             <!-- <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
@@ -90,8 +94,7 @@
 
 
                     <div class="crab1">
-                        <h1>Crab</h1>
-                        <div class="crabPicture1"></div>
+
 
                         <div class="crabType1">
 
@@ -362,6 +365,8 @@
                 </div>
 
             </div>
+            <div class="divider"></div>
+            
         </div>
     
 
@@ -374,7 +379,7 @@
 
             </div>
 
-            <div class="container" style="background-color:white">
+            <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                 <input type="text" placeholder="Name" name="name" required>
                 <input type="text" placeholder="Email" name="mail" required>
 
