--- a/seaFood/fMarket.html
+++ b/seaFood/fMarket.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css" type="text/css">
     <link rel="stylesheet" href="css/fMarket/nav.css" type="text/css">
     <link rel="stylesheet" href="css/fMarket/main.css" type="text/css">
-    <link rel="stylesheet" href="css/fMarket/main.css" type="text/css">
+    <link rel="stylesheet" href="css/fMarket/header.css" type="text/css">
     <link rel="stylesheet" href="css/fMarket/gallery.css" type="text/css">
     <link rel="stylesheet" href="css/fMarket/footer.css" type="text/css">
 
@@ -53,7 +53,7 @@
             <div class="box">
                 <div class="nav">
                     <ul>
-                        <li><a href="seaFoodInfo.html">SeaFood Info</a></li>
+                        <li><a href="sushi.html">Sushi</a></li>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="restaurants.html">Restaurants</a></li>
                     </ul>
@@ -85,7 +85,7 @@
             <div class="mapContainer">
                 <div id="map"></div>
             </div>
-            
+            <div class="divider"></div>
         </div>
 
         <div class="newsLetter">
@@ -95,7 +95,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
