--- a/seaFood/octopus.html
+++ b/seaFood/octopus.html
@@ -73,6 +73,8 @@
         </div>
 
         <div class="content">
+            <h1>Octopus</h1>
+            <div class="octopusPicture1"></div>
             <!-- <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
@@ -89,9 +91,10 @@
                 <div class="content2">
 
 
+
                     <div class="octo1">
-                        <h1>Octopus</h1>
-                        <div class="octopusPicture1"></div>
+                        
+                       
 
                         <div class="octoType1">
 
@@ -465,6 +468,7 @@
 
 
             </div> <!-- content2 -->
+            <div class="divider"></div>
         </div>
 
 
@@ -476,7 +480,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
