--- a/seaFood/sauces.html
+++ b/seaFood/sauces.html
@@ -50,6 +50,7 @@
                     <li><a href="shrimp.html">Shrimp</a></li>
                     <li><a href="lobster.html">Lobsters</a></li>
                     <li><a href="squid.html">Squid</a></li>
+                    <li><a href="octopus.html">Octopus</a></li>
                 </ul>
             </aside>
 
@@ -667,6 +668,7 @@
                 <!-- ----------------------------------------------------------------------------------------------- -->
 
             </div>
+            <div class="divider"></div>
         </div> <!-- content2 -->
 
 
@@ -678,7 +680,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
