--- a/seaFood/shrimp.html
+++ b/seaFood/shrimp.html
@@ -73,6 +73,10 @@
         </div>
 
         <div class="content">
+
+            <h1>Shrimp</h1>
+            <div class="shrimpPicture1"></div>
+
             <!-- <h2>Species Information:</h2>
             <div class="seaLifeType">
                 <ul>
@@ -89,8 +93,7 @@
                 <div class="content2">
 
                     <div class="shrimp1">
-                        <h1>Shrimp</h1>
-                        <div class="shrimpPicture1"></div>
+
 
                         <div class="shrimpType1">
 
@@ -459,6 +462,7 @@
                 </div>
 
             </div>
+            <div class="divider"></div>
         </div>
 
 
@@ -471,7 +475,7 @@
 
                 </div>
 
-                <div class="container" style="background-color:white">
+                <div class="container" style="background-color:rgba(255, 255, 255, 0.171)">
                     <input type="text" placeholder="Name" name="name" required>
                     <input type="text" placeholder="Email" name="mail" required>
 
